# zfs-replicate

./: .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  .vale.ini  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  autorepl.py  brittany.yaml  default.nix  mypy.ini  pylintrc  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  shell.nix  zfs-replicate.cabal  zfs-replicate.nix
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/actions/setup-poetry/: action.yml
.github/copilot/: commit-message.instructions.md  review.instructions.md  test-generation.instructions.md
.github/workflows/: ci.yml  nix.yml  poetry.yml  pre-commit.yml  publish.yml  pytest.yml  python-checks.yml  scorecard.yml  scripts.yml  semantic-pull-request.yml  stale.yml
docs/adr/: 0000-record-architecture-decisions.md  0001-schedule-parallel-replication-with-a-dependency-graph.md
docs/reference/: testing.md
nix/: default.nix  shell.nix
src/: Compression.hs  Control.hs  FileSystem.hs  Main.hs  SSH.hs  Shell.hs  Snapshot.hs  Task.hs  main.rs
src/FileSystem/: Create.hs  Types.hs
src/Snapshot/: Destroy.hs  Internal.hs  List.hs  Send.hs  Types.hs
src/Task/: Internal.hs  Types.hs
styles/Custom-Agent/: AgentRepeatedWords.yml  AgentSentenceLength.yml
styles/config/vocabularies/ZFS/: accept.txt
test/: TaskSpec.hs
test/Arbitrary/: Name.hs
test/FileSystem/: Arbitrary.hs  CreateSpec.hs
test/Snapshot/: Arbitrary.hs  InternalSpec.hs  TypesSpec.hs
test/Task/: InternalSpec.hs
vale-tests/: fixtures.json  run.py
vale-tests/fixtures/: code-fence-control.md  good-agent-instructions.md  human-doc-control.md  placeholder-control.md  repeated-instruction.md  too-long-instruction.md
zfs/replicate/: __init__.py  command.py  dataset.py  error.py  list.py  optional.py  process.py  snapshot.py  subprocess.py  task.py  time.py
zfs/replicate/cli/: __init__.py  click.py  log.py  main.py  options.py  receive.py
zfs/replicate/command/: __init__.py
zfs/replicate/compress/: __init__.py  command.py  type.py
zfs/replicate/filesystem/: __init__.py  create.py  destroy.py  list.py  type.py
zfs/replicate/receive/: __init__.py  command.py  type.py
zfs/replicate/send/: __init__.py  type.py
zfs/replicate/snapshot/: __init__.py  destroy.py  list.py  send.py  type.py
zfs/replicate/ssh/: __init__.py  cipher.py  command.py
zfs/replicate/task/: __init__.py  execute.py  generate.py  report.py  type.py
zfs_test/: __init__.py
zfs_test/replicate_test/: __init__.py  command_test.py  error_test.py  list_test.py  optional_test.py  process_test.py  snapshot_test.py  subprocess_test.py
zfs_test/replicate_test/cli_test/: log_test.py  main_test.py
zfs_test/replicate_test/compress_test/: __init__.py  command_test.py
zfs_test/replicate_test/receive_test/: __init__.py  command_test.py  type_test.py
zfs_test/replicate_test/send_test/: __init__.py  type_test.py
zfs_test/replicate_test/snapshot_test/: __init__.py  list_test.py  send_test.py  strategies.py  type_test.py
zfs_test/replicate_test/task_test/: execute_test.py  generate_test.py  report_test.py
