[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.fawltydeps]
ignore_unused = ["coveralls", "pytest-cov"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Alex Brandt <alunduil@gmail.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: System",
  "Topic :: System :: Archiving",
  "Topic :: System :: Filesystems"
]
description = "ZFS Snapshot Replicator"
keywords = ["zfs", "replication", "backup", "remote"]
license = "BSD-2-Clause"
name = "zfs-replicate"
packages = [{include = "zfs"}, {include = "zfs_test", format = "sdist"}]
readme = "README.md"
repository = "https://github.com/alunduil/zfs-replicate"
version = "3.2.2"

[tool.poetry.dependencies]
click = "^8.1.3"
python = "^3.8.0"

[tool.poetry.group.test.dependencies]
coveralls = ">=2.1.1,<4.0.0"
hypothesis = "^6.56.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
zfs-replicate = "zfs.replicate.cli.main:main"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=zfs --cov-report=term-missing"
testpaths = ["zfs_test"]

[tool.vulture]
paths = ["zfs", "zfs_test"]
