[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[project]
authors = [{name = "Alex Brandt", email = "alunduil@gmail.com"}]
description = "ZFS Snapshot Replicator"
# classifiers and dependencies are dynamic so Poetry generates the Python-version
# and license classifiers from the constraints and keeps its richer dependency syntax.
dynamic = ["classifiers", "dependencies"]
keywords = ["zfs", "replication", "backup", "remote"]
license = "BSD-2-Clause"
name = "zfs-replicate"
readme = "README.md"
requires-python = ">=3.9,<4.0"
version = "4.1.0"

[project.scripts]
zfs-replicate = "zfs.replicate.cli.main:main"

[project.urls]
repository = "https://github.com/alunduil/zfs-replicate"

[tool.fawltydeps]
ignore_unused = ["coveralls", "pytest-cov", "vale"]

[tool.isort]
profile = "black"

[tool.poetry]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System",
  "Topic :: System :: Archiving",
  "Topic :: System :: Filesystems"
]
packages = [{include = "zfs"}, {include = "zfs_test", format = "sdist"}]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
click = "^8.1.3"
python = "^3.9"

[tool.poetry.group.test.dependencies]
coveralls = ">=2.1.1,<4.0.0"
hypothesis = "^6.56.4"
pytest = ">=7.2,<9.0"
pytest-cov = ">=4,<6"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=zfs --cov-report=term-missing"
testpaths = ["zfs_test"]

[tool.vulture]
paths = ["zfs", "zfs_test"]
