[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[project]
authors = [{name = "Alex Brandt", email = "alunduil@gmail.com"}]
description = "ZFS Snapshot Replicator"
# classifiers and dependencies are dynamic so Poetry generates the Python-version
# and license classifiers from the constraints and keeps its richer dependency syntax.
dynamic = ["classifiers", "dependencies"]
keywords = ["zfs", "replication", "backup", "remote"]
license = "BSD-2-Clause"
name = "zfs-replicate"
readme = "README.md"
requires-python = ">=3.9,<4.0"
version = "4.1.0"

[project.scripts]
zfs-replicate = "zfs.replicate.cli.main:main"

[project.urls]
repository = "https://github.com/alunduil/zfs-replicate"

[tool.fawltydeps]
ignore_unused = ["coveralls", "pytest-cov", "ruff", "vale"]

[tool.mypy]
strict = true

[tool.poetry]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System",
  "Topic :: System :: Archiving",
  "Topic :: System :: Filesystems"
]
packages = [{include = "zfs"}, {include = "zfs_test", format = "sdist"}]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
click = "^8.1.3"
click-log = "^0.4.0"
python = "^3.9"

[tool.poetry.group.lint.dependencies]
ruff = "^0.15.20"

[tool.poetry.group.test.dependencies]
coveralls = ">=2.1.1,<4.0.0"
hypothesis = "^6.141.1"
pytest = ">=7.2,<9.0"
pytest-cov = ">=4,<6"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=zfs --cov-report=term-missing"
testpaths = ["zfs_test"]

[tool.ruff]
line-length = 120
src = ["."]
target-version = "py39"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
# UP (pyupgrade) is intentionally omitted here: enabling it rewrites ~99 typing
# annotations across the tree, deferred to keep this migration reviewable.
select = ["E", "F", "I", "B", "SIM", "D", "N", "S", "PL"]

[tool.ruff.lint.per-file-ignores]
# Tests assert (S101) and compare against literal expectations (PLR2004) by design.
"zfs_test/**" = ["PLR2004", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
