[metadata]
name = zfs-replicate
version = 1.0.0
description = ZFS Snapshot Replicator

license = BSD-2

author = Alex Brandt
author_email = alunduil@gmail.com

url = https://github.com/alunduil/zfs-replicate

[options]
setup_requires =
    pytest-runner
install_requires =
    click
tests_require =
    hypothesis
    pytest
packages =
    zfs.replicate
    zfs.replicate.cli
    zfs.replicate.ssh.cipher
provides =
    zfs.replicate
    zfs.replicate.cli
    zfs.replicate.ssh.cipher

[options.entry_points]
console_scripts =
    zfs-replicate = zfs.replicate.cli:main

[aliases]
test = pytest
