[metadata]
name = zfs-replicate
version = 1.2.0
description = ZFS Snapshot Replicator
long_description = file: README.rst
long_description_content_type = text/x-rst
url = "https://github.com/alunduil/zfs-replicate"
author = Alex Brandt
author_email = alunduil@gmail.com
license = BSD-2
license_file = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Intended Audience :: System Administrators
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: System
  Topic :: System :: Archiving
  Topic :: System :: Filesystems

[options]
packages = find:
install_requires =
  click
  stringcase
tests_requires =
  hypothesis
  pytest
python_requires = >=3.6

[options.packages.find]
exclude = *_test*

[options.entry_points]
console_scripts =
  zfs-replicate=zfs.replicate.cli.main:main

[bdist_wheel]
universal = True

[tool:pytest]
addopts =
  --doctest-modules
  --cov=zfs
  --cov-report=term-missing

[flake8]
max-line-length = 120
