name:                zfs-replicate
version:             0.2.0.0

license:             BSD2
license-file:        LICENSE

copyright:           (c) 2019 Alex Brandt

author:              Alex Brandt
maintainer:          alunduil@gmail.com

stability:           stable

homepage:            https://github.com/alunduil/zfs-replicate
bug-reports:         https://github.com/alunduil/zfs-replicate/issues

synopsis:            ZFS Snapshot Replicator
description:
  A small command line utility to handle remote replication of ZFS snapshots
  using SSH.  This project is directly based on the autorepl.py script used by
  FreeNAS.

category:            Filesystem

cabal-version:       >= 1.10
build-type:          Simple
tested-with:         GHC == 8.6.*

extra-source-files:
    CHANGELOG.md
  , LICENSE
  , README.rst
  , Setup.hs

executable zfs-replicate
  main-is: Main.hs

  ghc-options:
    -Wall
    -Wcompat

  default-language: Haskell2010

  build-depends:
      base >= 4.12 && < 4.13

  other-modules:

  hs-source-dirs:
      src

test-suite zfs-replicate-tests
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs

  ghc-options:
    -Wall
    -Wcompat

  default-language: Haskell2010

  build-depends:
      base >= 4.12 && < 4.13
    , hspec >= 2.7 && < 2.8

  other-modules:

  hs-source-dirs:
      src
    , test

  build-tool-depends:
      hspec-discover:hspec-discover >= 2.7 && < 2.8

source-repository head
  type:     git
  location: https://github.com/alunduil/zfs-replicate.git
  branch:   develop
