name:                zfs-replicate
version:             0.2.0.0

license:             BSD2
license-file:        LICENSE

copyright:           (c) 2019 Alex Brandt

author:              Alex Brandt
maintainer:          alunduil@gmail.com

stability:           stable

homepage:            https://github.com/alunduil/zfs-replicate
bug-reports:         https://github.com/alunduil/zfs-replicate/issues

synopsis:            ZFS Snapshot Replicator
description:
  A small command line utility to handle remote replication of ZFS snapshots
  using SSH.  This project is directly based on the autorepl.py script used by
  FreeNAS.

category:            Filesystem

cabal-version:       >= 1.10
build-type:          Simple
tested-with:         GHC == 8.6.*

extra-source-files:
    CHANGELOG.md
  , LICENSE
  , README.rst
  , Setup.hs

executable zfs-replicate
  main-is: Main.hs

  ghc-options:
    -Wall
    -Wcompat

  default-language: Haskell2010

  build-depends:
      base >= 4.12 && < 4.13
    , containers >= 0.6 && < 0.7
    , directory >= 1.3 && < 1.4
    , extra >= 1.7 && < 1.8
    , filepath >= 1.4 && < 1.5
    , optparse-applicative == 0.14.3.0
    , process >= 1.6 && < 1.7
    , text >= 1.2 && < 1.3

  other-modules:
      Control
    , FileSystem
    , FileSystem.Create
    , FileSystem.Types
    , Shell
    , Snapshot
    , Snapshot.Internal
    , Snapshot.List
    , Snapshot.Types
    , SSH
    , Task
    , Task.Internal
    , Task.Types

  hs-source-dirs:
      src

test-suite zfs-replicate-tests
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs

  ghc-options:
    -Wall
    -Wcompat

  default-language: Haskell2010

  build-depends:
      base >= 4.12 && < 4.13
    , containers >= 0.6 && < 0.7
    , extra >= 1.7 && < 1.8
    , filepath >= 1.4 && < 1.5
    , hspec >= 2.7 && < 2.8
    , process >= 1.6 && < 1.7
    , QuickCheck >= 2.13 && < 2.14
    , text >= 1.2 && < 1.3

  other-modules:
      Arbitrary.Name
    , Control
    , FileSystem
    , FileSystem.Arbitrary
    , FileSystem.Create
    , FileSystem.CreateSpec
    , FileSystem.Types
    , Shell
    , Snapshot
    , Snapshot.Arbitrary
    , Snapshot.Internal
    , Snapshot.InternalSpec
    , Snapshot.List
    , Snapshot.Types
    , Snapshot.TypesSpec
    , Task
    , Task.Internal
    , Task.InternalSpec
    , TaskSpec
    , Task.Types

  hs-source-dirs:
      src
    , test

  build-tool-depends:
      hspec-discover:hspec-discover >= 2.7 && < 2.8

source-repository head
  type:     git
  location: https://github.com/alunduil/zfs-replicate.git
  branch:   develop
